# xPlagiarismChecker

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  rust-toolchain.toml
core/: Cargo.toml
core/assets/: accepted_extensions.txt
core/src/: errors.rs  io.rs  lib.rs  models.rs
core/src/algorithm/: file.rs
core/src/models/: database.rs  ignore.rs  pattern.rs  submission.rs
engine/: Cargo.toml
engine/assets/: ignored_directories.txt
engine/src/: errors.rs  io.rs  lib.rs  models.rs
engine/src/models/: database.rs
gui/: Cargo.toml
gui/locales/: en.json  ua.json
gui/src/: algorithm.rs  config.rs  context.rs  engine.rs  errors.rs  files.rs  io.rs  localization.rs  logs.rs  main.rs  session.rs  settings.rs  ui.rs
gui/src/files/: config.rs  ignore.rs
gui/src/ui/: app.rs  channel.rs  commands.rs  components.rs  context.rs  modals.rs  pages.rs  state.rs  styles.rs  themes.rs
gui/src/ui/components/: navigator.rs  root.rs
gui/src/ui/modals/: error.rs
gui/src/ui/pages/: about.rs  database.rs  settings.rs
gui/src/ui/widgets/: settings.rs
utils/: Cargo.toml
utils/src/: macros.rs
