[package]
name = "core"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.92"

categories = ["science"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xPlagiarismChecker"

[lints]
workspace = true

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
zip = "6.0.0"