[package]
name = "gui"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.93"

categories = ["science"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xPlagiarismChecker"

[[bin]]
name = "xPlagiarismChecker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
engine = { path = "../engine" }

chrono = "0.4.43"
crossbeam = "0.8.4"
directories = "6.0.0"
egui = "0.33.3"
egui-aesthetix = { git = "https://github.com/xairaven/egui-aesthetix.git", features = ["all_themes"]}
egui-phosphor = "0.11"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
fern = "0.7.1"
log = "0.4.29"
o2o = "0.5.4"
open = "5.3.3"
rand = "0.9.2"
rfd = "0.17.2"
rust-i18n = "3.1.5"
rust-i18n-derive = "1.0.1"
semver = "1.0.27"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }